完成商品详情页面设计

--- a/webapp/item_info.html
+++ b/webapp/item_info.html
@@ -55,7 +55,7 @@
 		</div>
         <div class="clear"></div>
         <!--购买推荐左边栏-->
-        <div class="recommend">
+      <div class="recommend">
         <div class="head"><h3>购买本书的顾客还购买了</h3></div>
         <!----推荐迭代li---->
        <li><div class="p-img"><a href="" title="数学之美" target="_blank"><img width="50" height="50" src="upload/linux.jpg"></a></div>						 		<div class="p-name"><a href="" >高性能Linux服务器构建实战</a></div>
@@ -90,7 +90,7 @@
         <div id="preview">
         <div id="spec-n1"><img src="upload/linux.jpg"/></div>
         <ul>
-        <li><span>评分：</span><span class="star"><span class="sa45"></span></span></li>
+        <li><span>总评分：</span><span class="star"><span class="sa45"></span></span></li>
         </ul>
         </div>
         <ul id="summary">
@@ -108,6 +108,7 @@
         <li><span>定&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;价：</span><del>￥9.50</del></li>
         <li><span>商&nbsp;&nbsp;城&nbsp;&nbsp;价：</span><strong>￥8.08</strong></li>
         <li><span>为您节省：</span><strong>￥1.42</strong></li>
+        <li><span>库&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;存：</span>10</li>
         </ul>
         <div id="add_to_cart">
         <div id="item_amount">
@@ -119,67 +120,33 @@
 					<a onclick="add_to_cart()" href="javascript:void(0)" class="append" ></a><a onclick="favorite()" href="javascript:void(0)" class="favorite"></a>
 					<div class="clear"></div>
 				</div>
-        
+        </div>
+        <div class="clear"></div>
+        <div class="item_desc">
+        <div class="banner"><li>内容简介</li></div>
+        <div class="item_desc_con">&nbsp;&nbsp;&nbsp;&nbsp;本书是清华大学教材《大学物理学》的第四册，讲述振动与波的一般基本规律和波动光学的基本原理，包括光的干涉、衍射和偏振。除了基本内容外，还专题介绍了全息照相、光学信息处理、液晶等今日物理趣闻和着名物理学家托马斯·杨和菲涅耳的传略。<br/>&nbsp;&nbsp;&nbsp;&nbsp;基本内容扼要，附加内容通俗易懂。本书可作为高等院校的大学物理教材，也可以作为中学物理教师教学或其他读者自学的参考书。</div>
+        </div>
+        <div id="comment">
+        <div class="banner"><li>用户评价</li></div>
+        <div class="comment_item">
+        <div class="buyer">
+        <span class="buyer_name">测试用户</span>
+        <span class="sa45"></span>
+        <span class="date-comment">2012-06-21 08:41:32</span>
+        </div>
+        <div class="comment-content">厚厚的一本，由浅入深，知识比较全面，适合初学者学习使用</div>
+        </div>
+        <div class="comment_item">
+        <div class="buyer">
+        <span class="buyer_name">测试用户2</span>
+        <span class="sa4"></span>
+        <span class="date-comment">2012-06-21 08:41:32</span>
+        </div>
+        <div class="comment-content">很不错的书，测试测试测试测试测试测试测试测试</div>
         </div>
         </div>
-		<div id="sendnote">
-			<div id="sendnotehead"><strong>商品信息</strong></div>
-			<div id="sendnotecontent">
-				<table id="creditquery">
-				<caption>
-				大学物理学.第四册：波动与光学（第2版）
-				</caption>
-				<tbody>
-				<tr>
-          <td><img src="image/dxwl4.jpg" alt="大学物理第四册" class="picture1"></td>
-          <td colspan="4" class="tdleftalign">本书是清华大学教材《大学物理学》的第四册，讲述振动与波的一般基本规律和波动光学的基本原理，包括光的干涉、衍射和偏振。除了基本内容外，还专题介绍了全息照相、光学信息处理、液晶等今日物理趣闻和着名物理学家托马斯·杨和菲涅耳的传略。基本内容扼要，附加内容通俗易懂。本书可作为高等院校的大学物理教材，也可以作为中学物理教师教学或其他读者自学的参考书。</td>
-        </tr>
-       <tr>
-		  <td>作者：张嗣音</td>
-		  <td>出版社：清华大学出版社</td>
-          <td>出版日期：2011-11-11</td>
-		  <td>ISBN：92937929921331</td>
-		  <td>页数：310页</td>
-		  </tr>
-		  <tr>
-		  <td>装帧：平装</td>
-		  <td>纸张：胶印纸</td>
-          <td>语种：中文</td>
-		  <td>分类：教材</td>	
-		  </tr>
-		  <tr>
-          <td>市场价：￥9.50</td>
-          <td>会员价：￥8.08</td>
-		  <td>节省：￥1.42</td>
-		  <td>库存量：10</td>
-		  <td>用户评分：</td>
-        </tr>
-		<tr>
-		  <td></td>
-          <td></td>
-		  <td></td>
-		  <td></td>
-		<td><br><a href="comment_add.html">【参与评论】</a></td>
-		</tr>
-				 </tbody>
-		<tfoot>
-		<tr>
-			<td></td>
-          <td></td>
-		  <td></td>
-		  <td>
-		</td>
-		  <td>
-		  <a href="cart_list.html"><img src="image/goumai.gif" alt="购买" class="picture"></a>&nbsp;
-		<a href="favorite.html"><img src="image/put_to_collection.gif" alt="收藏" class="picture"></a>
-			</td>
-		</tr>
-		</tfoot>
-            </table>	
-			</div>
-		</div>
-		
-	<div id="footer">
+        </div>
+      <div id="footer">
 		<span id="footerleft"> &nbsp;隐私权 | 版权 | 法律声明 | 电子邮件：admin@163.com </span>
 		<span id="footerright"> B2C商城  Power by IBM &nbsp;</span>
 	</div>
