--- a/webapp/lib/login.html
+++ b/webapp/lib/login.html
@@ -22,13 +22,13 @@
 					</td>
 					<td class="itemsearchtd2"></td>
                    </tr>
-          		 <tr class="hide">
+          		 <tr class="">
 				 <th class="itemsearchth">验证码：</th>
             		<td class="itemsearchtd1">
 						<input type="text" name="captcha" class="inputtext"/>
 					</td>
 					<td>
-					 <img  src="captcha_get_captcha" />	
+					 <img  src="captcha_get_captcha" onclick="change_captcha(this)"/>	
 					</td>
           		 </tr>
 				 <tr >
