--- a/webapp/user.html
+++ b/webapp/user.html
@@ -67,7 +67,7 @@
         </dl>
         </div>
         <div id="1" class="user_note">
-        <div class="head"><strong>浏览信息</strong></div>
+        <div class="head">浏览信息</div>
         <div class="user_note_content">
         	<p><span>用户名：</span>test@test.com</p>
             <p><span>昵&nbsp;&nbsp;&nbsp;称：</span>测试昵称</p>
@@ -75,7 +75,7 @@
         </div>
         </div>
         <div id="2" class="user_note hide">
-        <div class="head"><strong>修改密码</strong></div>
+        <div class="head">修改密码</div>
         <div class="user_note_content">
         <form>
         	<p><span>原密码：</span><input class="inputtext"/></p>
@@ -86,7 +86,7 @@
         </div>
         </div>
         <div id="3" class="user_note hide">
-        <div class="head"><strong>个人信息</strong></div>
+        <div class="head">个人信息</div>
         <div class="user_note_content">
             <p><span>昵&nbsp;&nbsp;&nbsp;称：</span>测试昵称</p>
             <p><span>修改昵称：</span><input class="inputtext"/></p>
@@ -94,7 +94,7 @@
         </div>
         </div>
         <div id="4" class="user_note hide">
-        <div class="head"><strong>积分详情</strong></div>
+        <div class="head">积分详情</div>
         <div class="user_note_content">
         	<table>
 				<thead>
