--- a/webapp/index.html
+++ b/webapp/index.html
@@ -11,6 +11,14 @@
 <div id="container">
 <div id="cart" ><span class="cart_loading"></span></div>
 	<div id="logalleft">
+    <div id="top-overlay"></div>
+    <!----吊顶栏------>
+	<div class="top">
+    <li>
+    <span class="cart_icon"></span>
+    </li>
+    </div>
+  <!------吊顶结束----->
 		<div id="logalright">欢迎你<s:property value="#session.username"/><s:property value="#session.nickname"/><li><a href="#" onclick="load_regist();" >注册</a>&nbsp;</li>|<li> <a href="#" id="load_login" onclick="load_login();" >登录</a>&nbsp;</li>|
 		<li> <a  href="user.html" target="_parent">个人信息</a>&nbsp;</li>|<li id="cart_li"> 
 		<a id="cart_a"  href="cart_list.html" target="_parent">购物车 <strong id="cart_num">0</strong> 件</a>&nbsp;</li>|<li> <a href="#" target="_parent">退出</a></li>
