--- a/webapp/index.html
+++ b/webapp/index.html
@@ -15,18 +15,17 @@
     <!----吊顶栏------>
 	<div class="top">
     <div class="top_right">
-    <li><a>test</a>
-    </li>
-    <li id="cart_top">
-    <span class="cart_icon"></span><a id="cart_a" href="cart_list.html">购物车 <strong id="cart_num">0</strong> 件</a>
+    <li>欢迎来到Symagic！</li>
+    <!--<s:property value="#session.username"/><s:property value="#session.nickname"/>-->
+    <li id="login_top" onclick="load_login();"><a>登录</a></li>
+    <li id="regist_top" onclick="load_regist();"><a>免费注册</a></li>
+    <li class="division">|</li><li id="mymall"><a href="user.html"><span id="mymall_icon"></span>我的商城</a></li><li class="division">|</li>
+    <li id="cart_top"><a id="cart_a" href="cart_list.html">
+    <span id="cart_icon"></span>购物车 <strong id="cart_num">0</strong> 件</a>
     </li>
     </div>
     </div>
   <!------吊顶结束----->
-		<div id="logalright">欢迎你<s:property value="#session.username"/><s:property value="#session.nickname"/><li><a href="#" onclick="load_regist();" >注册</a>&nbsp;</li>|<li> <a href="#" id="load_login" onclick="load_login();" >登录</a>&nbsp;</li>|
-		<li> <a  href="user.html" target="_parent">个人信息</a>&nbsp;</li>|<li id="cart_li"> 
-		<a id="cart_a"  href="" target="_parent">testestestes</a>&nbsp;</li>|<li> <a href="#" target="_parent">退出</a></li>
-		</div>
 	</div>
 	<div id="globallink">
 		<ul>
