更改快速搜索和footer

--- a/webapp/admin/category_list.html
+++ b/webapp/admin/category_list.html
@@ -108,11 +108,15 @@ else
 			</div>
             <div id="searchright"  style="float:right" >
 			  <select name="category" id="searchrightcategory">
-				<option value="5">所有类别</option>
-                <option value="1">文学</option>
-                <option value="2">艺术</option>
-                <option value="3">金融与投资</option>
-                <option value="4">励志与成功	</option>
+				<option value="0">所有类别</option>
+                <option value="1">文艺</option>
+                <option value="2">少儿</option>
+                <option value="3">人文社会</option>
+                <option value="4">经济与管理</option>
+                <option value="5">生活与励志</option>
+                <option value="6">科技</option>
+                <option value="7">教育</option>
+                <option value="8">其他</option>
               </select>
 			  <input type="text" name="product" id="textInput" />
 			  <input type="button" name="Submit" value="搜索" id="searchbutton" onClick="javascript:window.open('item_search_list.html','_parent','')">
@@ -331,8 +335,8 @@ else
 
 </div>
 	<div id="footer">
-		<span id="footerleft"> &nbsp;隐私权 | 版权 | 法律声明 | 电子邮件：admin@163.com </span>
-		<span id="footerright"> B2C商城  Power by IBM &nbsp;</span>
+		<span id="footerleft"> &nbsp;隐私权 | 版权 | 法律声明 | 电子邮件：Symagics@gmail.com </span>
+		<span id="footerright"> Symagic网上书城  Power by Symagic	 &nbsp;</span>
 	</div>
 </body>
 </html>
