--- a/webapp/admin/item_list.html
+++ b/webapp/admin/item_list.html
@@ -38,11 +38,15 @@
 			</div>
             <div id="" style="float:right" >
 			  <select name="category" id="searchrightcategory">
-				<option value="5">所有类别</option>
-                <option value="1">图书音像</option>
-                <option value="2">时尚生活</option>
-                <option value="3">饰品配件</option>
-                <option value="4">数码产品</option>
+				<option value="0">所有类别</option>
+                <option value="1">文艺</option>
+                <option value="2">少儿</option>
+                <option value="3">人文社会</option>
+                <option value="4">经济与管理</option>
+                <option value="5">生活与励志</option>
+                <option value="6">科技</option>
+                <option value="7">教育</option>
+                <option value="8">其他</option>
               </select>
 			  <input type="text" name="product" id="textInput" />
 			  <input type="button" name="Submit" value="搜索" id="searchbutton" onClick="javascript:window.open('item_search_list.html','_parent','')">
@@ -212,8 +216,8 @@
 
 </div>
 	<div id="footer">
-		<span id="footerleft"> &nbsp;隐私权 | 版权 | 法律声明 | 电子邮件：admin@163.com </span>
-		<span id="footerright"> B2C商城  Power by IBM &nbsp;</span>
+		<span id="footerleft"> &nbsp;隐私权 | 版权 | 法律声明 | 电子邮件：Symagics@gmail.com </span>
+		<span id="footerright"> Symagic网上书城  Power by Symagic	 &nbsp;</span>
 	</div>
 </body>
 </html>
