--- a/webapp/admin/order_info.html
+++ b/webapp/admin/order_info.html
@@ -127,10 +127,9 @@ document.form1.webUserEntity.phone="";
 			</form> 
   </div>
 
-</div>
-	<div id="footer">
-		<span id="footerleft"> &nbsp;隐私权 | 版权 | 法律声明 | 电子邮件：admin@163.com </span>
-		<span id="footerright"> B2C商城  Power by IBM &nbsp;</span>
+<div id="footer">
+		<span id="footerleft"> &nbsp;隐私权 | 版权 | 法律声明 | 电子邮件：Symagics@gmail.com </span>
+		<span id="footerright"> Symagic网上书城  Power by Symagic	 &nbsp;</span>
 	</div>
 </body>
 </html>
