--- a/webapp/admin/salesdata_admin.html
+++ b/webapp/admin/salesdata_admin.html
@@ -169,11 +169,15 @@ document.form1.webUserEntity.order="";
 				 <th>类别：</th>
             		<td>
 					  	<select name="category">
-			    <option value="5">所有类别</option>
-                <option value="1">图书音像</option>
-                <option value="2">时尚生活</option>
-                <option value="3">饰品配件</option>
-                <option value="4">数码产品</option>
+			   <option value="0">所有类别</option>
+                <option value="1">文艺</option>
+                <option value="2">少儿</option>
+                <option value="3">人文社会</option>
+                <option value="4">经济与管理</option>
+                <option value="5">生活与励志</option>
+                <option value="6">科技</option>
+                <option value="7">教育</option>
+                <option value="8">其他</option>
               </select> 
 					</td>
           		 </tr>
@@ -191,8 +195,8 @@ document.form1.webUserEntity.order="";
 		</div>
 		
 	<div id="footer">
-		<span id="footerleft"> &nbsp;隐私权 | 版权 | 法律声明 | 电子邮件：admin@163.com </span>
-		<span id="footerright"> B2C商城  Power by IBM &nbsp;</span>
+		<span id="footerleft"> &nbsp;隐私权 | 版权 | 法律声明 | 电子邮件：Symagics@gmail.com </span>
+		<span id="footerright"> Symagic网上书城  Power by Symagic	 &nbsp;</span>
 	</div>
 </div>
 
