--- a/webapp/admin/salesdata_list.html
+++ b/webapp/admin/salesdata_list.html
@@ -98,8 +98,8 @@ document.form1.webUserEntity.phone="";
 		</div>
 		
 	<div id="footer">
-		<span id="footerleft"> &nbsp;隐私权 | 版权 | 法律声明 | 电子邮件：admin@163.com </span>
-		<span id="footerright"> B2C商城  Power by IBM &nbsp;</span>
+		<span id="footerleft"> &nbsp;隐私权 | 版权 | 法律声明 | 电子邮件：Symagics@gmail.com </span>
+		<span id="footerright"> Symagic网上书城  Power by Symagic	 &nbsp;</span>
 	</div>
 </div>
 
