--- a/webapp/admin/storage_admin.html
+++ b/webapp/admin/storage_admin.html
@@ -85,9 +85,9 @@ document.form1.webUserEntity.phone="";
 		  </div>
 		</div>
 		
-	<div id="footer">
-		<span id="footerleft"> &nbsp;隐私权 | 版权 | 法律声明 | 电子邮件：admin@163.com </span>
-		<span id="footerright"> B2C商城  Power by IBM &nbsp;</span>
+	<<div id="footer">
+		<span id="footerleft"> &nbsp;隐私权 | 版权 | 法律声明 | 电子邮件：Symagics@gmail.com </span>
+		<span id="footerright"> Symagic网上书城  Power by Symagic	 &nbsp;</span>
 	</div>
 </div>
 
