购物车吊顶设计完成

--- a/webapp/item_search_list.html
+++ b/webapp/item_search_list.html
@@ -26,7 +26,7 @@
 			<li><a href="credit_query.html">积分查询</a></li>
 			<li><a href="item_search.html">商品搜索</a></li>
 			<li><a href="favorite.html">收藏夹</a></li>
-			<li><a href="cart_list.html">我的购物车</a></li>
+			<li><a href="cart.html">我的购物车</a></li>
 			<li><a href="tradequery.html">交易查询</a></li>
 			<li><a href="send_notes.html">送货说明</a></li>
 			<li><a href="" class="nouseful">&nbsp;</a></li>
@@ -78,7 +78,7 @@
                         出版日期：2011-11-11  用户评分：<img src="image/4star.JPG" alt="喜欢" class="picture"><br />
 						市场价：￥10.00<br>
 						会员价：￥8.50<br>
-						<a href="cart_list.html"><img src="image/goumai.gif" alt="购买" class="picture"></a>&nbsp;
+						<a href="cart.html"><img src="image/goumai.gif" alt="购买" class="picture"></a>&nbsp;
 		<a href="favorite.html"><img src="image/put_to_collection.gif" alt="收藏" class="picture"></a>
 					</td>
           		  </tr>
@@ -95,7 +95,7 @@
                         出版日期：2010-11-11  用户评分：<img src="image/4star.JPG" alt="喜欢" class="picture"><br />
 						市场价：￥16.00<br>
 						会员价：￥13.60<br>
-						<a href="cart_list.html"><img src="image/goumai.gif" alt="购买" class="picture"></a>&nbsp;
+						<a href="cart.html"><img src="image/goumai.gif" alt="购买" class="picture"></a>&nbsp;
 		<a href="favorite.html"><img src="image/put_to_collection.gif" alt="收藏" class="picture"></a>
 					</td>
           		  </tr>
