--- a/webapp/favorite.html
+++ b/webapp/favorite.html
@@ -26,7 +26,7 @@
 			<li><a href="credit_query.html">积分查询</a></li>
 			<li><a href="item_search.html">商品搜索</a></li>
 			<li><a href="favorite.html">收藏夹</a></li>
-			<li><a href="cart_list.html">我的购物车</a></li>
+			<li><a href="cart.html">我的购物车</a></li>
 			<li><a href="tradequery.html">交易查询</a></li>
 			<li><a href="send_notes.html">送货说明</a></li>
 			<li><a href="" class="nouseful">&nbsp;</a></li>
@@ -86,7 +86,7 @@
 						￥8.50
 					</td>
 					<td>
-						<a href="cart_list.html"><img src="image/put_to_cart.gif" class="picture"/></a>&nbsp;<a href="#" onClick="window.confirm('确定删除？')"><img src="image/delete_item.gif" class="picture" /></a>
+						<a href="cart.html"><img src="image/put_to_cart.gif" class="picture"/></a>&nbsp;<a href="#" onClick="window.confirm('确定删除？')"><img src="image/delete_item.gif" class="picture" /></a>
 					</td>
           		  </tr>
 				  <tr>
@@ -108,7 +108,7 @@
 						￥8.08
 					</td>
 					<td>
-					<a href="cart_list.html"><img src="image/put_to_cart.gif" class="picture"/></a>&nbsp;<a href="#" onClick="window.confirm('确定删除？')"><img src="image/delete_item.gif"  class="picture" /></a>
+					<a href="cart.html"><img src="image/put_to_cart.gif" class="picture"/></a>&nbsp;<a href="#" onClick="window.confirm('确定删除？')"><img src="image/delete_item.gif"  class="picture" /></a>
 					</td>
           		  </tr>
 				 </tbody>
