--- a/webapp/item_in.html
+++ b/webapp/item_in.html
@@ -26,7 +26,7 @@
 			<li><a href="credit_query.html">积分查询</a></li>
 			<li><a href="item_search.html">商品搜索</a></li>
 			<li><a href="favorite.html">收藏夹</a></li>
-			<li><a href="cart_list.html">我的购物车</a></li>
+			<li><a href="cart.html">我的购物车</a></li>
 			<li><a href="tradequery.html">交易查询</a></li>
 			<li><a href="send_notes.html">送货说明</a></li>
 			<li><a href="" class="nouseful">&nbsp;</a></li>
@@ -76,7 +76,7 @@
 						<span class="red">大学物理学.第四册：波动与光学（第2版）</span><br>
 						市场价：￥10.00<br>
 						会员价：￥8.50<br>
-						<a href="cart_list.html"><img src="image/goumai.gif" alt="购买" class="picture"></a>&nbsp;
+						<a href="cart.html"><img src="image/goumai.gif" alt="购买" class="picture"></a>&nbsp;
 		<a href="favorite.html"><img src="image/put_to_collection.gif" alt="收藏" class="picture"></a>
 					</td>
           		  </tr>
@@ -91,7 +91,7 @@
 						<span class="red">大学物理学.第一册：力学（第2版）</span><br>
 						市场价：￥16.00<br>
 						会员价：￥13.60<br>
-						<a href="cart_list.html"><img src="image/goumai.gif" alt="购买" class="picture"></a>&nbsp;
+						<a href="cart.html"><img src="image/goumai.gif" alt="购买" class="picture"></a>&nbsp;
 		<a href="favorite.html"><img src="image/put_to_collection.gif" alt="收藏" class="picture"></a>
 					</td>
           		  </tr>
