--- a/webapp/order_confirm_new.html
+++ b/webapp/order_confirm_new.html
@@ -27,7 +27,7 @@
 			<li><a href="credit_query.html">积分查询</a></li>
 			<li><a href="item_search.html">商品搜索</a></li>
 			<li><a href="favorite.html">收藏夹</a></li>
-			<li><a href="cart_list.html">我的购物车</a></li>
+			<li><a href="cart.html">我的购物车</a></li>
 			<li><a href="tradequery.html">交易查询</a></li>
 			<li><a href="send_notes.html">送货说明</a></li>
 			<li><a href="" class="nouseful">&nbsp;</a></li>
@@ -38,7 +38,7 @@
 		<div id="search2">
 			<div id="searchleft">
 				<img src="image/ico_site.jpg"  id="ico_site"/>
-				网站路径：<a href="index.html">首页</a>&gt;&gt;<a href="cart_list.html"> 购物车</a>&gt;&gt;<a href="address_edit.html"> 添加地址簿</a>
+				网站路径：<a href="index.html">首页</a>&gt;&gt;<a href="cart.html"> 购物车</a>&gt;&gt;<a href="address_edit.html"> 添加地址簿</a>
 			</div>
 			<div id="searchright2">
 			  <input type="text" name="product" id="textInput"/>
