购物车异步调用jsp

--- a/webapp/address.html
+++ b/webapp/address.html
@@ -11,24 +11,10 @@
 <body>
 <div id="container">
 	<div id="cart">
-	<span class="cart_loading"></span>
+	<span id="cart_loading"></span>
 	<div id="cart_none">您的购物车中还没有商品，请选购！</div>
-	<div id="cart_container">
-    	<div id="cart_head"><h4>最近加入的商品</h4></div>
-        <div id="cart_content">
-            <ul>	
-            <!--购物车内容迭代-->
-                <li>
-                	<div class="cart_img"><a href=""><img src="upload/linux.jpg"/></a></div>
-                    <div class="cart_name"><a href="">大学物理学.第四册：波动与光学(第2版)</a></div>
-                    <div class="cart_price"><strong>￥15.00</strong><span>x1</span><br><a href="" class="delete">删除</a></div>
-                    </li>
-            <!--购物车内容迭代结束-->
-            </ul>
-        </div>
-        <div id="cart_button">共&nbsp;<strong>3</strong>&nbsp;件商品&nbsp;&nbsp;&nbsp;共计&nbsp;<strong>￥40.00</strong><br>
-        <a href="cart.html">去购物车结算</a><div class="clear"></div></div>
-    </div>	
+	<div id="cart_container"></div>
+	
 </div>
 	<div id="logalleft">
 		<div id="logalright">
