add some pictures and some pages

--- a/webapp/admin/item_list.html
+++ b/webapp/admin/item_list.html
@@ -204,15 +204,16 @@
 			<form action="" method="post" enctype="multipart/form-data" name="form1">
 				<table id="xialabiao">
 				<tr>
-				<td width="7%" rowspan="4" align="center"><span class="red">1</span></td>
-            <td width="16%" rowspan="4" align="right" class="inputHeader"><a href="item_info.html"><img src="../image/dxwl4.jpg" alt="大学物理第4册" width="69" height="100" border="0"></a></td>
-			<td width="77%" align="left" class="inputHeader"><span class="red">大学物理学.第四册：波动与光学（第2版）</span></font><br />作者：张嗣音&nbsp; 出版社：清华大学出版社</td>
+				<td width="7%" rowspan="2" align="center"><span class="red">1</span></td>
+                <td class="checkBoxWidth"><input type="checkbox" /></td>
+            <td width="16%" rowspan="2" align="right" class="inputHeader"><a href="item_info.html"><img src="../image/dxwl4.jpg" alt="大学物理第4册" width="69" height="100" border="0"></a></td>
+			<td width="77%" align="left" class="inputHeader"><span class="red" id="item_font20">大学物理学.第四册：波动与光学（第2版）</span></font><br /><font id="item_font17">作者：张嗣音&nbsp; &nbsp; </font><br /><font id="item_font17">出版社：清华大学出版社&nbsp; &nbsp;出版时间：2011-11-11</font>&nbsp; <br />
+            </td>
 			</tr>
             <tr>
-            <td align="left" class="inputHeader">出版时间：2011-11-11&nbsp; </td>
             </tr>
           <tr>
-            <td align="left" class="inputHeader">市场价：￥10.00<br />会员价：￥8.50</td>
+            <td align="left" class="inputHeader"></td>
           </tr>
           <tr>
             <td align="left" class="inputHeader"><a  style="display:none"href="item_edit.html"><img src="../image/bt_change.gif" alt="修改" width="37" height="19" border="0"></a>&nbsp;&nbsp;
@@ -247,7 +248,7 @@
            <tr>
             <td width="7%" rowspan="4" align="center"><span class="red">3</span></td>
              <td width="16%" rowspan="4" align="center" class="inputHeader"><img src="../image/dxwl1.jpg" alt="大学物理第1册" width="68" height="100"></td>
-			 <td align="left" class="inputHeader"><span class="red">大学物理学.第一册：力学（第2版）</span>
+			 <td align="left" class="inputHeader"><span class="red" id="item_font">大学物理学.第一册：力学（第2版）</span>
              <br />作者：郝少年&nbsp;出版社：华南理工大学出版社<br />
              出版时间：2011-05-18
              </td>
