--- a/webapp/user.html
+++ b/webapp/user.html
@@ -75,7 +75,7 @@
         </div>
         <div class="user_left">
         <dl>
-        <dt>编辑个人信息</dt>
+        <dt>我的商城</dt>
         <div onclick="show_user_con('1')"><dd>浏览信息</dd></div>
         <div onclick="show_user_con('2')"><dd>修改密码</dd></div>
         <div onclick="show_user_con('3')"><dd>修改昵称</dd></div>
