--- a/webapp/admin/item_list.html
+++ b/webapp/admin/item_list.html
@@ -188,7 +188,7 @@
           		 </tr>
 				 <tr>
 				 <th></th>
-				 	<td id="button_right"><input type="submit" class="" name="button2" value="搜索" onClick="javascript:window.location.href='item_search_list.html'">
+				 	<td id="button_right"><input type="submit" name="button2" value="搜索"<!-- onClick="javascript:window.location.href='item_search_list.html'"-->>
 				 </tr>
         </table>	
         </form>
@@ -203,46 +203,46 @@
 			<div id="doublecontent1">
 			<form action="" method="post" enctype="multipart/form-data" name="form1">
 				<table id="xialabiao">
-				<tr>
-				<td width="7%" rowspan="2" align="center"><span class="red">1</span></td>
-                <td class="checkBoxWidth"><input type="checkbox" /></td>
-            <td width="16%" rowspan="2" align="right" class="inputHeader"><a href="item_info.html"><img src="../image/dxwl4.jpg" alt="大学物理第4册" width="69" height="100" border="0"></a></td>
-			<td width="77%" align="left" class="inputHeader"><span class="red" id="item_font20">大学物理学.第四册：波动与光学（第2版）</span></font><br /><font id="item_font17">作者：张嗣音&nbsp; &nbsp; </font><br /><font id="item_font17">出版社：清华大学出版社&nbsp; &nbsp;出版时间：2011-11-11</font>&nbsp; <br />
+                 <s:iterator value = "items" var = "bookItems" status = "st">
+				<tr id="<s:property value = '#bookItems.itemID'/>">
+				<td width="7%" rowspan="1" align="center"><span class="red"><s:property value="#st.index"/></span></td>
+                <td class="checkBoxWidth" align="center"><input type="checkbox" value="<s:property value = '#bookItems.itemID'/>" /></td>
+            <td width="16%" rowspan="1" align="right" class="inputHeader">
+            <a href="item_info.html"><img src="../<s:property value = '#bookItems.picturePath'/>" alt="<s:property value = '#bookItems.name'/>" id="img_format"></a>
             </td>
-			</tr>
-            <tr>
-            </tr>
-          <tr>
-            <td align="left" class="inputHeader"></td>
-          </tr>
-          <tr>
-            <td align="left" class="inputHeader"><a  style="display:none"href="item_edit.html"><img src="../image/bt_change.gif" alt="修改" width="37" height="19" border="0"></a>&nbsp;&nbsp;
-            <input type="button" onclick="location.href='item_edit.html'" value="修改"/>&nbsp;&nbsp;
-            <input type="button" value="下架"/>&nbsp;&nbsp;
-		<input type="button" value="删除"/>&nbsp;&nbsp;
-        <a href="item_list_refresh.html" style="display:none" onClick="javascript:if(window.confirm('确定删除？')) window.location.href='item_list_refresh.html';else return false;"><img src="../image/bt_delete.gif" alt="删除" width="37" height="19" border="0"></a>
-        </td>
+			<td width="77%" align="left" class="inputHeader"><span class="red" id="item_font20"><s:property value = "#bookItems.name"/></span></font><br /><font id="item_font17">作者：<s:property value = "#bookItems.author"/>&nbsp; &nbsp; </font><br />
+            <font id="item_font17">出版社：<s:property value = "#bookItems.publisher"/>&nbsp; &nbsp;出版时间：<s:property value = "#bookItems.publishTime"/></font>&nbsp; <br />
+            <font id="item_font17"> 市场价:<s:property value = "#bookItems.marketPrice"/>&nbsp;</font><font id="item_font17" class="font_right">商城价：<s:property value = "#bookItems.price"/></font>
+            </td>
+            <td align="left" class="inputHeader">
+            <a href="item_modify?itemID=<s:property value = '#bookItems.itemID'/>"><input type="button"  value="修改"/></a>&nbsp;&nbsp;
+            <a>
+            <input type="button" onclick="ajax_item_off(this,"<s:property value = "#bookItems.itemID"/>")" value="下架"/></a>&nbsp;&nbsp;
+		    <a onclick="ajax_delete_tag("<s:property value = "#bookItems.itemID"/>")" ><input type="button"  value="删除"/></a>&nbsp;&nbsp;
+            </td>
+            	</tr>
+                </s:iterator>
+            </table>
+			</div>
+			</div>
+<!--        <a href="item_list_refresh.html" style="display:none" onClick="javascript:if(window.confirm('确定删除？')) window.location.href='item_list_refresh.html';else return false;"><img src="../image/bt_delete.gif" alt="删除" width="37" height="19" border="0"></a>-->
+      <!--  </td>
           </tr>
 		  
           <tr>
             <td width="7%" rowspan="4" align="center"><span class="red">2</span></td>
-             <td width="16%" rowspan="4" align="center" class="inputHeader"><img src="../image/dxwl2.jpg" alt="大学物理第2册" width="70" height="100"></td>
-			<td align="left" class="inputHeader"><span class="red">大学物理学.第二册：热学（第2版）</span></font>
+             <td width="16%" rowspan="3" align="center" class="inputHeader"><img src="../image/dxwl2.jpg" alt="大学物理第2册" width="70" height="100"></td>
+			<td align="left" rowspan="5	"class="inputHeader"><span class="red">大学物理学.第二册：热学（第2版）</span></font>
             <br/>作者：霍金&nbsp;出版社：机械工业出版社<br/>
-            出版时间：2010-05-14
+            出版时间：2010-05-14<br />
+            市场价：￥9.50&nbsp;&nbsp;会员价：￥8.08
             </td>
 			</tr>
-          <tr>
-            <td align="left" class="inputHeader">市场价：￥9.50</td>
-          </tr>
-          <tr>
-            <td align="left" class="inputHeader">会员价：￥8.08</td>
-          </tr>
           <tr>
             <td align="left" class="inputHeader">&nbsp;&nbsp;
             <input type="button" value="修改"/>&nbsp;&nbsp;
             <input type="button" value="下架"/>&nbsp;&nbsp;
-		<input type="button" value="删除"/>&nbsp;&nbsp;
+		    <input type="button" value="删除"/>&nbsp;&nbsp;
             </td>
           </tr>
            <tr>
@@ -264,11 +264,8 @@
              <input type="button" value="修改"/>&nbsp;&nbsp;
             <input type="button" value="下架"/>&nbsp;&nbsp;
 		<input type="button" value="删除"/>&nbsp;&nbsp;
-             </td>
-				</tr>
-            </table>
-			</div>
-			</div>
+             </td>-->
+			
 			
 			
 			<a name="1"></a>
