--- a/webapp/user.html
+++ b/webapp/user.html
@@ -95,8 +95,7 @@
                 	</div>
                     <div class="column p-name">商品信息</div>
                     <div class="column p-price">商城价</div>
-                    <div class="column">数量</div>
-                    <div class="column">小计</div>
+                    <div class="column inventory">库存</div>
                     <div class="column action">操作</div>
             	</div>
                 <div id="favorite-content-body">
@@ -105,8 +104,6 @@
                 	</div>
                     <div class="">商品信息</div>
                     <div class="">商城价</div>
-                    <div class="">数量</div>
-                    <div class="">小计</div>
                     <div class="">操作</div>
             	</div>
         	</div>
