--- a/webapp/admin/item_edit.html
+++ b/webapp/admin/item_edit.html
@@ -43,7 +43,7 @@
 		<div id="sendnote">
 			<div id="sendnotehead"><strong>编辑商品</strong></div>
 			<div id="sendnotecontent">
-            <form action="" method="post">
+            <form action="item_modify_submit" method="post">
 				<table id="itemsearch">
 				   <tr>
 					<th width="181" id="tr_align">图书名称：</th>
